# indico-plugin-bbb

./: MANIFEST.in  README.md  setup.cfg
vc_bbb/: __init__.py  api.py  blueprint.py  controllers.py  forms.py  plugin.py
vc_bbb/templates/: buttons.html  event_buttons.html
vc_bbb/translations/: messages.pot
vc_bbb/translations/de_DE/LC_MESSAGES/: messages.mo  messages.po
vc_bbb/translations/en_US/LC_MESSAGES/: messages.po
vc_bbb/translations/uk_UA/LC_MESSAGES/: messages.mo  messages.po
