# This file is part of the Indico plugins.
# Copyright (C) 2002 - 2020 CERN
#
# The Indico plugins are free software; you can redistribute
# them and/or modify them under the terms of the MIT License;
# see the LICENSE file for more details.

[metadata]
name = indico-plugin-bbb
version = 1.5
description = BigBlueButton video-conferencing plugin for Indico
url = https://github.com/Ithanil/indico-plugin-bbb
license = MIT
author = Jan Kessler
author_email = jakessle@t-online.de
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = ~=3.9
install_requires =
    indico>=3.0.dev0

[options.entry_points]
indico.plugins =
    vc_bbb = vc_bbb.plugin:BigBlueButtonPlugin

[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213
